Side banners no longer shown on mobile devices
ipads had rendering issues

--- a/app/assets/css/app/pages/home/side-banners.css
+++ b/app/assets/css/app/pages/home/side-banners.css
@@ -13,7 +13,7 @@
 }
 
 @media (min-width: 768px) {
-	html.csstransforms .side-banners-container {
+	html.csstransforms.pc .side-banners-container {
 		display: block;
 	}
 }
